# opengl_example

./: CMakeLists.txt  CMakePresets.json  Dependency.cmake
src/: common.cpp  common.h  context.cpp  context.h  main.cpp  program.cpp  program.h  shader.cpp  shader.h
